deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chinaplas-web
spec:
  selector:
    app.kubernetes.io/name: chinaplas
  ports:
    - name: http
      port: 80
      targetPort: http
