deploy/base/ingress-www-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chinaplas-www-redirect
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://chinaplas.lol
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.chinaplas.lol
      secretName: chinaplas-www-tls
  rules:
    - host: www.chinaplas.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chinaplas-web
                port:
                  number: 80
