deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chinaplas-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chinaplas.lol
      secretName: chinaplas-lol-tls
  rules:
    - host: chinaplas.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chinaplas-web
                port:
                  name: http
